# DeV-Todo-Services

./: .gitignore  Dockerfile  README.md  prompt.txt  pyproject.toml  requirements.txt  test.py
.github/workflows/: main.yml
app/: app.py  app.service  check.json
benchmark/: aggregator.py  calibration.py  config.py  deviation_analysis.py  evaluator.py  io_utils.py  llm.py  main.py  models.py
benchmark/data/: calibration.jsonl  examples.jsonl
benchmark/prompts/: candidate_system_prompt.txt  judge_system_prompt.txt
benchmark/res/: results.jsonl  summary.json
db/: bm25.py  embedding.py  handler_data.py  parse_apache_issues.py  parse_data.py  retrieval.py
mcp/: check.json  mcp.py  mcp.service
prompt/: answer_schema.json  prompt.txt
